Core-436-418 v2 and invoice endpoints (#762)
* Enhance the order response

* If only

* No cs for now please

* Bad alex

* Bad alex 2

* Fix reason

* Skip for now

* Long lines fix

* fix

* fix

* fix

* Cool json match

* Revert

* due date

* More tests

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* one less

* stop behat again

* stop behat again

* stop behat again

* kill due date

* kill due date

* more tests

* more tests

* more tests

* more tests

* more tests

* more tests

* more tests

* phpcs

* phpcs

* phpcs

* phpcs

* CR

* revert last commit

* Implemetation

* Docs

* Pr regards and docs

* Small fix and getting the new values from invoice-butler

* docs

* Move to public

* Docs

* Test fix

* Tests

* test fix

* test fix

* Fix

* Docs

* Tests

* Fix uuid

* Fix docs

* docs

* fix coments

* docs

* Docs

* switch back

* fix response

* Fix response

* Fix access to not inicialised param

* response

* remove  else
