# src/Http/Controller/PublicApi/CreateDashboardOrderController.php
@@ -6,7 +6,7 @@ namespace App\Http\Controller\PublicApi;
 
 use App\Application\UseCase\CreateOrder\CreateOrderUseCase;
 use App\DomainModel\Order\OrderEntity;
-use App\DomainModel\OrderResponse\OrderResponseV1;
+use App\DomainModel\OrderResponse\OrderResponse;
 use App\Http\HttpConstantsInterface;
 use App\Http\RequestTransformer\CreateOrder\CreateOrderRequestFactory;
 use OpenApi\Annotations as OA;
@@ -52,7 +52,7 @@ class CreateDashboardOrderController
         $this->orderRequestFactory = $orderRequestFactory;
     }
 
-    public function execute(Request $request): OrderResponseV1
+    public function execute(Request $request): OrderResponse
     {
         $request->attributes->set(
             HttpConstantsInterface::REQUEST_ATTRIBUTE_CREATION_SOURCE,
